--- a/.htaccess
+++ b/.htaccess
@@ -2,5 +2,5 @@
 
 IndexIgnore .htaccess */.??* *~ *# */HEADER* */README* */_vti*
 
-ErrorDocument 404 /404.php
-ErrorDocument 500 /404.php
+ErrorDocument 404 /carparts/404.php
+ErrorDocument 500 /carparts/404.php
