--- a/.htaccess
+++ b/.htaccess
@@ -2,8 +2,8 @@
 
 IndexIgnore .htaccess */.??* *~ *# */HEADER* */README* */_vti*
 
-ErrorDocument 404 /carparts/404.php
-ErrorDocument 500 /carparts/404.php
+ErrorDocument 404 /404.php
+ErrorDocument 500 /404.php
 
 <IfModule mod_expires.c>
  ExpiresActive on
@@ -62,3 +62,10 @@ RewriteCond %{REQUEST_FILENAME} !-f
 RewriteRule ^part/([0-9]+)$ part.php?id=$1 
 RewriteRule ^parts/page/([0-9]+)$ parts.php?page=$1
 RewriteRule ^parts.php& parts.php?page=1
+
+AuthName "Restricted Area" 
+AuthType Basic 
+AuthUserFile /.htpasswd 
+<Files user_logs.txt>
+require user ziga
+</Files>
