Minified docs, htacces modified

--- a/.htaccess
+++ b/.htaccess
@@ -6,52 +6,77 @@ ErrorDocument 404 /404.php
 ErrorDocument 500 /404.php
 
 <IfModule mod_expires.c>
- ExpiresActive on
 
- # Perhaps better to whitelist expires rules? Perhaps.
- ExpiresDefault                          "access plus 1 month"
+    ExpiresActive on
+    ExpiresDefault                                      "access plus 1 month"
 
- # cache.appcache needs re-requests in FF 3.6 (thanks Remy ~Introducing HTML5)
- ExpiresByType text/cache-manifest       "access plus 0 seconds"
+  # CSS
+    ExpiresByType text/css                              "access plus 1 year"
 
- # Your document html
- ExpiresByType text/html                 "access plus 0 seconds"
-ExpiresByType text/php                 "access plus 0 seconds"
+  # Data interchange
+    ExpiresByType application/atom+xml                  "access plus 1 hour"
+    ExpiresByType application/rdf+xml                   "access plus 1 hour"
+    ExpiresByType application/rss+xml                   "access plus 1 hour"
 
- # Data
- ExpiresByType text/xml                  "access plus 0 seconds"
- ExpiresByType application/xml           "access plus 0 seconds"
- ExpiresByType application/json          "access plus 0 seconds"
+    ExpiresByType application/json                      "access plus 0 seconds"
+    ExpiresByType application/ld+json                   "access plus 0 seconds"
+    ExpiresByType application/schema+json               "access plus 0 seconds"
+    ExpiresByType application/vnd.geo+json              "access plus 0 seconds"
+    ExpiresByType application/xml                       "access plus 0 seconds"
+    ExpiresByType text/xml                              "access plus 0 seconds"
 
- # Feed
- ExpiresByType application/rss+xml       "access plus 1 hour"
- ExpiresByType application/atom+xml      "access plus 1 hour"
+  # Favicon (cannot be renamed!) and cursor images
+    ExpiresByType image/vnd.microsoft.icon              "access plus 1 week"
+    ExpiresByType image/x-icon                          "access plus 1 week"
 
- # Favicon (cannot be renamed)
- ExpiresByType image/x-icon              "access plus 1 week"
+  # HTML
+    ExpiresByType text/html                             "access plus 0 seconds"
 
- # Media: images, video, audio
- ExpiresByType image/gif                 "access plus 1 month"
- ExpiresByType image/png                 "access plus 1 month"
- ExpiresByType image/jpeg                "access plus 1 month"
- ExpiresByType video/ogg                 "access plus 1 month"
- ExpiresByType audio/ogg                 "access plus 1 month"
- ExpiresByType video/mp4                 "access plus 1 month"
- ExpiresByType video/webm                "access plus 1 month"
+  # JavaScript
+    ExpiresByType application/javascript                "access plus 1 year"
+    ExpiresByType application/x-javascript              "access plus 1 year"
+    ExpiresByType text/javascript                       "access plus 1 year"
 
- # HTC files  (css3pie)
- ExpiresByType text/x-component          "access plus 1 month"
+  # Manifest files
+    ExpiresByType application/manifest+json             "access plus 1 year"
 
- # Webfonts
- ExpiresByType application/x-font-ttf    "access plus 1 month"
- ExpiresByType font/opentype             "access plus 1 month"
- ExpiresByType application/x-font-woff   "access plus 1 month"
- ExpiresByType image/svg+xml             "access plus 1 month"
- ExpiresByType application/vnd.ms-fontobject "access plus 1 month"
+    ExpiresByType application/x-web-app-manifest+json   "access plus 0 seconds"
+    ExpiresByType text/cache-manifest                   "access plus 0 seconds"
 
- # CSS and JavaScript
- ExpiresByType text/css                  "access plus 0 seconds"
- ExpiresByType application/javascript    "access plus 0 seconds"
+  # Media files
+    ExpiresByType audio/ogg                             "access plus 1 month"
+    ExpiresByType image/bmp                             "access plus 1 month"
+    ExpiresByType image/gif                             "access plus 1 month"
+    ExpiresByType image/jpeg                            "access plus 1 month"
+    ExpiresByType image/png                             "access plus 1 month"
+    ExpiresByType image/svg+xml                         "access plus 1 month"
+    ExpiresByType video/mp4                             "access plus 1 month"
+    ExpiresByType video/ogg                             "access plus 1 month"
+    ExpiresByType video/webm                            "access plus 1 month"
+
+  # Web fonts
+
+    # Embedded OpenType (EOT)
+    ExpiresByType application/vnd.ms-fontobject         "access plus 1 month"
+    ExpiresByType font/eot                              "access plus 1 month"
+
+    # OpenType
+    ExpiresByType font/opentype                         "access plus 1 month"
+
+    # TrueType
+    ExpiresByType application/x-font-ttf                "access plus 1 month"
+
+    # Web Open Font Format (WOFF) 1.0
+    ExpiresByType application/font-woff                 "access plus 1 month"
+    ExpiresByType application/x-font-woff               "access plus 1 month"
+    ExpiresByType font/woff                             "access plus 1 month"
+
+    # Web Open Font Format (WOFF) 2.0
+    ExpiresByType application/font-woff2                "access plus 1 month"
+
+  # Other
+    ExpiresByType text/x-cross-domain-policy            "access plus 1 week"
+
 </IfModule>
 
 RewriteEngine On
@@ -69,3 +94,28 @@ AuthUserFile /.htpasswd
 <Files user_logs.txt>
 require user ziga
 </Files>
+
+<IfModule mod_headers.c>
+    Header set X-UA-Compatible "IE=edge"
+    <FilesMatch "\.(appcache|atom|bbaw|bmp|crx|css|cur|eot|f4[abpv]|flv|geojson|gif|htc|ico|jpe?g|js|json(ld)?|m4[av]|manifest|map|mp4|oex|og[agv]|opus|otf|pdf|png|rdf|rss|safariextz|svgz?|swf|topojson|tt[cf]|txt|vcard|vcf|vtt|webapp|web[mp]|woff2?|xloc|xml|xpi)$">
+        Header unset X-UA-Compatible
+    </FilesMatch>
+</IfModule>
+
+<IfModule mod_headers.c>
+    <FilesMatch "\.(eot|otf|tt[cf]|woff2?)$">
+        Header set Access-Control-Allow-Origin "*"
+    </FilesMatch>
+</IfModule>
+
+<IfModule mod_setenvif.c>
+    <IfModule mod_headers.c>
+        <FilesMatch "\.(bmp|cur|gif|ico|jpe?g|png|svgz?|webp)$">
+            SetEnvIf Origin ":" IS_CORS
+            Header set Access-Control-Allow-Origin "*" env=IS_CORS
+        </FilesMatch>
+    </IfModule>
+</IfModule>
+
+SetOutputFilter DEFLATE
+AddOutputFilterByType DEFLATE text/html text/plain text/xml text/css text/javascript application/javascript
